完善MongoDB报表系统功能
主要改进：
1. 修复图表显示问题（ECharts实例管理、默认颜色）
2. 完善表格功能（分页、搜索、数据过滤）
3. 优化数据过滤条件（保存、应用、ID显示修复）
4. 美化用户界面（标题、样式、用户体验）
5. 增强后端功能（数据源管理、认证、CORS）
6. 添加完整的Vue Router路由系统
7. 实现报表查看页面的用户友好标题

技术改进：
- 修复ECharts实例冲突问题
- 实现表格分页和搜索功能
- 优化数据过滤条件的保存和应用
- 修复MongoDB ObjectId显示问题
- 美化前端界面和用户体验
- 完善后端API和数据处理逻辑

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,10 +50,38 @@
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.11.5</version>
+            <scope>runtime</scope>
         </dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>aliyun</id>
+			<name>aliyun</name>
+			<url>https://maven.aliyun.com/repository/public</url>
+		</repository>
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>aliyun-plugin</id>
+			<name>aliyun-plugin</name>
+			<url>https://maven.aliyun.com/repository/public</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<plugins>
