feat: 完成MongoDB用户密码认证功能
- 添加MongoDB用户认证支持
- 创建认证数据源管理功能
- 更新前端界面支持认证配置
- 添加测试脚本和文档
- 创建5个认证数据源供测试使用
- 完善应用配置和连接工具

主要功能：
✅ MongoDB用户名密码认证
✅ 前端认证数据源管理界面
✅ 连接测试功能
✅ 认证数据源预设配置
✅ 完整的测试和文档

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 spring.application.name=MongoReporter
-spring.data.mongodb.uri=mongodb://localhost:27017/mongo-reporter
+spring.data.mongodb.uri=mongodb://mongo_reporter_user:mongo_reporter_pass123@localhost:27017/mongo-reporter?authSource=mongo-reporter
+
+# MongoDB认证配置
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=mongo_reporter_user
+spring.data.mongodb.password=mongo_reporter_pass123
+
+# 安全配置
+jwt.secret=mongo-reporter-secret-key-256-bits-long
+jwt.expiration=86400000
+
+# 服务器配置
+server.port=8080
+server.servlet.context-path=/
+
+# 日志配置
+logging.level.com.mongo.reporter=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
