feat: 完善MongoReporter功能 - 支持MongoDB用户密码认证 - 修复图表主题配置问题 - 实现报表分享功能 - 配置Spring Boot热更新 - 优化数据源连接状态管理

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,3 +17,11 @@ server.servlet.context-path=/
 # 日志配置
 logging.level.com.mongo.reporter=DEBUG
 logging.level.org.springframework.data.mongodb=DEBUG
+
+# 热更新配置
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.poll-interval=2s
+spring.devtools.restart.quiet-period=1s
+spring.devtools.restart.additional-paths=src/main/java
+spring.devtools.restart.exclude=static/**,public/**,templates/**
